--- a/Pokemon Scrapper.ipynb
+++ b/Pokemon Scrapper.ipynb
@@ -13109,7 +13109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -13124,6 +13124,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9e7c2c35f9e8a9eadd399e91c964566b5f204c59288eff0bad2bf39803ed467c"
+   }
   }
  },
  "nbformat": 4,
